--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A vulnerability identification tool",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npx tsc",
+    "start": "npm run build -- -w",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -17,6 +19,33 @@
   },
   "homepage": "https://github.com/z-arnott/Vega#readme",
   "dependencies": {
+    "axios": "^1.2.1",
     "express": "^4.18.2"
-  }
+  },
+  "devDependencies": {
+    "@babel/core": "^7.20.5",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-typescript": "^7.18.6",
+    "@types/express": "^4.17.14",
+    "@types/jest": "^29.2.4",
+    "@types/node": "^18.11.13",
+    "babel-jest": "^29.3.1",
+    "ts-jest": "^29.0.3",
+    "typescript": "^4.9.4"
+  },
+  "jest": {
+    "roots":[
+        "dist"
+    ],
+    "moduleDirectories": [
+        "node_modules",
+        "src"
+     ],
+     "moduleNameMapper": {
+      "^@utils/(.*)$": "<rootDir>/src/utils/$1"
+    },
+     "preset": "ts-jest",
+     "testEnvironment": "node"
+   }
+
 }
