--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "npx tsc",
     "start": "npm run build -- -w",
-    "test": "jest"
+    "test": "jest",
+    "prettier": "npx prettier --write"
   },
   "repository": {
     "type": "git",
@@ -30,22 +31,28 @@
     "@types/jest": "^29.2.4",
     "@types/node": "^18.11.13",
     "babel-jest": "^29.3.1",
+    "prettier": "2.8.1",
     "ts-jest": "^29.0.3",
     "typescript": "^4.9.4"
   },
   "jest": {
-    "roots":[
-        "dist"
+    "roots": [
+      "dist"
     ],
     "moduleDirectories": [
-        "node_modules",
-        "src"
-     ],
-     "moduleNameMapper": {
+      "node_modules",
+      "src"
+    ],
+    "moduleNameMapper": {
       "^@utils/(.*)$": "<rootDir>/src/utils/$1"
     },
-     "preset": "ts-jest",
-     "testEnvironment": "node"
-   }
-
+    "preset": "ts-jest",
+    "testEnvironment": "node"
+  },
+  "prettier": {
+    "tabWidth": 2,
+    "useTabs": false,
+    "singleQuote": true,
+    "jsxSingleQuote": true
+  }
 }
