--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/jest": "^29.2.4",
     "@types/node": "^18.11.13",
     "babel-jest": "^29.3.1",
+    "dotenv-webpack": "^8.0.1",
     "prettier": "2.8.1",
     "ts-jest": "^29.0.3",
     "typescript": "^4.9.4"
