--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "build": "npx tsc",
-    "start": "npm run build -- -w",
-    "test": "jest",
+    "start": "node ./dist/src/index.js",
+    "sanityTests": "newman run ./test/sanity/SanityTests.postman_collection.json",
+    "test": "jest; npm run sanityTests",
     "prettier": "npx prettier --write ."
   },
   "repository": {
@@ -32,6 +33,7 @@
     "@types/node": "^18.11.13",
     "babel-jest": "^29.3.1",
     "dotenv-webpack": "^8.0.1",
+    "newman": "^5.3.2",
     "prettier": "2.8.1",
     "ts-jest": "^29.0.3",
     "typescript": "^4.9.4"
