add src/services to import path

--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
       "src"
     ],
     "moduleNameMapper": {
-      "^@utils/(.*)$": "<rootDir>/src/utils/$1"
+      "^@utils/(.*)$": "<rootDir>/src/utils/$1",
+      "^@services/(.*)$": "<rootDir>/src/services/$1"
     },
     "preset": "ts-jest",
     "testEnvironment": "node"
