--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "babel-jest": "^29.3.1",
     "dotenv-webpack": "^8.0.1",
     "prettier": "2.8.1",
+    "supabase": "^1.28.2",
     "ts-jest": "^29.0.3",
     "typescript": "^4.9.4"
   },
