--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@types/node": "^18.11.13",
     "babel-jest": "^29.3.1",
     "dotenv-webpack": "^8.0.1",
+    "fast-xml-parser": "^4.0.12",
+    "fs": "^0.0.1-security",
     "newman": "^5.3.2",
     "prettier": "2.8.1",
     "ts-jest": "^29.0.3",
