--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
   },
   "homepage": "https://github.com/z-arnott/Vega#readme",
   "dependencies": {
-    "axios": "^1.2.1",
-    "express": "^4.18.2"
+    "@types/express-fileupload": "^1.4.1",
+    "axios": "^1.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.5",
@@ -33,6 +33,8 @@
     "@types/node": "^18.11.13",
     "babel-jest": "^29.3.1",
     "dotenv-webpack": "^8.0.1",
+    "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
     "fast-xml-parser": "^4.0.12",
     "fs": "^0.0.1-security",
     "newman": "^5.3.2",
