--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "jest",
     "prettier": "npx prettier --write ."
   },
+  
   "repository": {
     "type": "git",
     "url": "git+https://github.com/z-arnott/Vega.git"
@@ -33,12 +34,25 @@
     "@types/node": "^18.11.13",
     "babel-jest": "^29.3.1",
     "dotenv-webpack": "^8.0.1",
+    "jest": "^29.3.1",
     "prettier": "2.8.1",
     "supabase": "^1.28.2",
     "ts-jest": "^29.0.3",
     "typescript": "^4.9.4"
   },
   "jest": {
+    "scriptPreprocessor": "../node_modules/babel-jest",
+    "testFileExtensions": [
+      "es6",
+      "js",
+      "ts"
+    ],
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "es6",
+      "ts"
+    ],
     "roots": [
       "dist"
     ],
