--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "newman": "^5.3.2",
     "prettier": "2.8.1",
     "ts-jest": "^29.0.3",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "winston": "^3.8.2"
   },
   "jest": {
     "roots": [
