--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "newman": "^5.3.2",
     "prettier": "2.8.1",
     "ts-jest": "^29.0.3",
+    "typedoc": "^0.23.24",
     "typescript": "^4.9.4"
   },
   "jest": {
