--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "homepage": "https://github.com/z-arnott/Vega#readme",
   "dependencies": {
     "@types/express-fileupload": "^1.4.1",
-    "axios": "^1.2.1"
+    "axios": "^1.2.1",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.5",
