--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/express": "^4.17.14",
     "@types/jest": "^29.2.4",
     "@types/node": "^18.11.13",
+    "@types/uuid": "^9.0.0",
     "babel-jest": "^29.3.1",
     "dotenv-webpack": "^8.0.1",
     "express": "^4.18.2",
@@ -47,6 +48,7 @@
     "ts-jest": "^29.0.3",
     "typedoc": "^0.23.24",
     "typescript": "^4.9.4",
+    "uuid": "^9.0.0",
     "winston": "^3.8.2"
   },
   "jest": {
